--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -78,6 +78,9 @@ jobs:
             playbooks/oem_blackout
             playbooks/oracle_restore_points
             playbooks/oracle_password_rotation
+            playbooks/oracle_audit_replication_management
+            playbooks/oracle_backup
+            playbooks/oracle_ha
             playbooks/ansible.cfg
             common
           path: operations
@@ -120,9 +123,11 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/operations/playbooks/oracle_audit_replication_management/oracle_audit_replication_management $PWD/roles/ansible/roles/oracle_audit_replication_management
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oem_blackout/roles
+          ln -s $PWD/operations/playbooks/oracle_ha/build-ha $PWD/roles/ansible/roles/build-ha
           $command -i $inventory -e target_hosts=${{ steps.definetargets.outputs.primary_db_host }} \
           -e ndelius_version=${{ github.event.inputs.Version }} \
           -e create_restore_point=${{ github.event.inputs.CreateRestorePoint }} \
