--- a/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
@@ -67,13 +67,22 @@
         JAVA_HOME={{ target_home }}/jdk/jre
         PATH=$PATH:$JAVA_HOME/bin
         java -jar {{ target_home }}/lib/osbws_install.jar -IAMRole {{ iam_role }} \
-         -walletDir {{ target_home }}/dbs/osbws_wallet -libDir {{ target_home }}/lib/ \
+         -walletDir {{ target_home }}/dbs/osbws_wallet \
          -location {{ region }} -awsEndpoint s3-{{ region }}.amazonaws.com \
          -useHttps
       register: install_output
 
     - name: Show Output from Install OSBWS Library
       debug: var=install_output.failed
+
+    # Starting with Oracle Database 19c Release Update version 27 (19.27), the backup module installer files 
+    # are available in the Oracle home directory after you install the Oracle Database.
+    # As we no longer download these we must unzip the library files provided with the Oracle Home.
+    - name: Unzip OSBWS Library
+      unarchive:
+         src: "{{ target_home }}/lib/osbws_linux64.zip"
+         dest: "{{ target_home }}/lib"
+         remote_src: true
 
     - name: Copy osbws_wallet folder contents back
       shell: |
