--- a/playbooks/deploy_mms/playbook.yml
+++ b/playbooks/deploy_mms/playbook.yml
@@ -5,8 +5,8 @@
     INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
     ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
     DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
-    APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
-    aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-application-passwords --region {{ region }} --query SecretString --output text| jq -r .mms_pool
+    SECRET_ID=${ENVIRONMENT_NAME%-*}-${DELIUS_ENVIRONMENT}-oracle-db-application-passwords
+    aws secretsmanager get-secret-value --secret-id ${SECRET_ID} --query SecretString --output text| jq -r .mms_pool
   register: mms_password
   changed_when: false
   no_log: true
