Force use of bash shell

--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -31,7 +31,8 @@
       loop: "{{ get_list_of_oem_targets.stdout_lines }}"
 
     - name: Set the Metric Thresholds
-      shell: |
+      shell: bash
+      run: |
         # Quoting the heredoc delimiter is required to avoid expansion of $ symbol
         # used in Metric Extension names ME$METRIC_EXTENSION
         cat <<-'EOINPUT' > {{ stage }}/oem_threshold.txt
