--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -59,6 +59,7 @@ on:
           - "36522439:p36522439_190000_Linux-x86-64.zip:(19.24)"
           - "36866740:p36866740_190000_Linux-x86-64.zip:(19.25)"
           - "37591516:p37591516_190000_Linux-x86-64.zip:(19.27)"
+          - "37952382:p37952382_190000_Linux-x86-64.zip:(19.28)"
       AWSSnapshot:
         description: "Number of Days to Keep AWS Snapshot of Primary Database Host"
         required: true
